# minute-of-silince

./: .eslintrc.json  .gitignore  CHANGELOG.md  CHANGELOG.yaml  CONTRIBUTING.md  README.md  appxmanifest.xml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml
docs/: architecture.md
flatpak/: minute-of-silence.metainfo.xml  minute-of-silence.yml  ua.minute_of_silence.desktop  ua.minute_of_silence.flathub.yml  ua.minute_of_silence.metainfo.xml  ua.minute_of_silence.yml  ua.pp.khvylyna.MinuteOfSilence.desktop  ua.pp.khvylyna.MinuteOfSilence.metainfo.xml  ua.pp.khvylyna.MinuteOfSilence.yml
public/: flag-animation.html
snap/: snapcraft.yaml
src/: AboutTab.tsx  App.tsx  ChangelogTab.tsx  Overlay.tsx  PersonalDatesTab.tsx  SettingsTab.tsx  api.ts  app.ts  (+8 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: en.toml  uk.toml
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  platform_linux.rs  platform_scheduler_task.rs  platform_windows.rs  platform_windows_notifications.rs  state.rs  tray.rs
src-tauri/src/app/: commands.rs  mod.rs  tray.rs
src-tauri/src/core/: audio.rs  ceremony.rs  mod.rs  ntp.rs  ntp_service.rs  platform.rs  scheduler.rs  settings.rs
src-tauri/src/platform/: mod.rs  msix.rs
src-tauri/src/platform/linux/: autostart.rs  media.rs  mod.rs  theme.rs
src-tauri/src/platform/macos/: MediaVolumeHelper.swift  autostart.rs  media.rs  mod.rs  theme.rs  volume.rs
src-tauri/src/platform/windows/: autostart.rs  media.rs  mod.rs  notifications.rs  power.rs  theme.rs  volume.rs
src-tauri/tests/: scheduler_test.rs  settings_test.rs
(+20 files in other folders)
