[package]
name = "minute-of-silence"
version = "0.5.0"
description = "A desktop application for the daily Minute of Silence at 09:00"
authors = ["Serhii Cherneha"]
license-file = "../LICENSE"
repository = "https://github.com/ChernegaSergiy/minute-of-silence"
edition = "2021"
rust-version = "1.75"

[lib]
name = "minute_of_silence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "minute-of-silence"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-log = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
rsntp = "4.1"
log = "0.4"
thiserror = "2.0"
anyhow = "1.0"
dirs = "6.0"
lazy_static = "1.4"
rodio = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Power",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Media_Control",
] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9"
zbus = "4.3"

[profile.release]
opt-level = "s"      # optimize for binary size
lto = true
codegen-units = 1
panic = "abort"
strip = true
